CREATE TABLE UPLOADED_FILES (
	id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
	name VARCHAR(100),
	creator_id INTEGER NOT NULL,
	object_key VARCHAR(136),
	uploaded BOOLEAN DEFAULT FALSE,
	created_at TIMESTAMP(6) WITH TIME ZONE,
	share_url VARCHAR(100),
	short_url_hash VARCHAR(8),
	original_url VARCHAR(600),
	expires_in TIMESTAMP(6) WITH TIME ZONE,
	content_type VARCHAR(64),
	size_bytes BIGINT NOT NULL DEFAULT 0,
	CONSTRAINT fk_uploaded_file_creator FOREIGN KEY (creator_id) REFERENCES USERS(id)
);

CREATE INDEX short_url_hash_index ON UPLOADED_FILES (short_url_hash);

CREATE INDEX creator_id_index ON UPLOADED_FILES (creator_id);