CREATE TABLE PASSWORD_RESET_TOKENS (
  id UUID PRIMARY KEY,
  user_id BIGINT NOT NULL,
  created_at TIMESTAMP(6) WITH TIME ZONE NOT NULL,
  expires_at TIMESTAMP(6) WITH TIME ZONE NOT NULL,
  FOREIGN KEY (user_id) REFERENCES USERS(id)
);